<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowAnalyseResult_cn"
        android:textSize="20sp"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <!--msg-->
    <TextView
        android:id="@+id/AnalyseRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_msg_cn"
        android:textSize="20sp"
        android:padding="12dp"
        android:textColor="@color/green"/>

    <!--诊断结果-->
    <TextView
        android:id="@+id/GDMResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/greenoutlinerect"
        android:text="@string/normal_cn"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:padding="15dp"
        android:gravity="center_vertical|center_horizontal"/>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green"
        android:layout_marginTop="50dp"/>

    <!--准确度-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_cn"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <!--环状图-->
    <com.lemonxq_laplace.pregnantmonitor.view.DountChartView
        android:id="@+id/dountChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>