<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <!--账号-->
    <EditText
        android:id="@+id/account"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/account"
        app:layout_constraintBaseline_toBaselineOf="@+id/accountText"
        app:layout_constraintLeft_toRightOf="@+id/accountText"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/Account_en"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/account"
        app:layout_constraintTop_toTopOf="parent" />

    <!--密码-->
    <EditText
        android:id="@+id/password"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@+id/password"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordText"
        app:layout_constraintLeft_toRightOf="@+id/passwordText"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Password_en"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/accountText" />

    <!--按钮-->
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Login_en"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Signup_en"
        app:layout_constraintLeft_toRightOf="@+id/login"
        app:layout_constraintRight_toLeftOf="@+id/visitor"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Guest_en"
        app:layout_constraintLeft_toRightOf="@+id/signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</android.support.constraint.ConstraintLayout>