<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecordHint_cn"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/currentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2017年12月4日 0:40 周一"
        android:textSize="17sp"
        android:padding="10dp"/>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!--年龄-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/ageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Age_cn"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/age"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ageBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/input_hint_cn"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"/>
        <!--<EditText-->
            <!--android:id="@+id/age"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="18sp"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/ageText"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/ageText"-->
            <!--app:layout_constraintRight_toRightOf="parent" />-->
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!--身高-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/heightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Height_cn"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/height"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/heightBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/input_hint_cn"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"/>
        <!--<EditText-->
            <!--android:id="@+id/height"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="18sp"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/heightText"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/heightText"-->
            <!--app:layout_constraintRight_toRightOf="parent" />-->
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!--体重-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/weightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Weight_cn"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/weight"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/weightBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/input_hint_cn"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"/>
        <!--<EditText-->
            <!--android:id="@+id/weight"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="18sp"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/weightText"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/weightText"-->
            <!--app:layout_constraintRight_toRightOf="parent" />-->
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!--OGTT-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/ogttText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/OGTT_cn"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ogtt"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ogttBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/input_hint_cn"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"/>
        <!--<EditText-->
            <!--android:id="@+id/ogtt"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:textColor="@color/green"-->
            <!--android:textSize="18sp"-->
            <!--android:hint="@string/input_hint_cn"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/ogttText"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/ogttText"-->
            <!--app:layout_constraintRight_toRightOf="parent" />-->
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <!--分析按钮-->
    <Button
        android:id="@+id/btn_analyse"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/ConfirmAnalyse_cn"
        android:textColor="@color/green"
        android:textSize="18sp" />

</LinearLayout>
